data/all_generated_tests/raw_wast_tests/block_InvalidorInconsistentControlFlowGraph_2451.wast
;; 2. **Test Description**: Implement a block wherein a branch targets an improperly indexed label, causing an off-by-one error. The WebAssembly implementation should fail due to incorrect label indexing, while `wizard_engine` manages this via `ctl_stack`.    - **Constraint Checked**: Correct handling of label insertion and indexing.    - **Relation to CFG**: This test targets misalignment in branch execution paths within the CFG.

(assert_invalid
  (module (func $block-label-index-error (result i32)
    (block (result i32)
      (block (result i32) (br 2 (i32.const 42))) (i32.const 0)
    )
  ))
  "unknown label"
)